--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -1,1 +1,7 @@
-#contact-info {font-size: .8em}
+#contact-info {font-size: .8em;}
+
+.job {background-color: #E9E5DC; 
+    border-radius: 20px
+}
+
+ul {font-size: .8em;}
