--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -1,7 +1,11 @@
 #contact-info {font-size: .8em;}
 
+#contact-info:hover {color: hotpink;}
+
 .job {background-color: #E9E5DC; 
     border-radius: 20px
 }
 
 ul {font-size: .8em;}
+
+.volunteer-gig ul {font-style: italic;}
