--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -45,8 +45,14 @@ main {width: 756px;
 
 }
 
-@media handheld and (orientation: portrait) {
+@media screen and (max-width: 500px) {
     #external-links {
-        display: block;
+        font-size: 0.8em;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    body {
+        font-size: 1.5em;
     }
 }
